--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "markov-strings": "^2.1.0",
     "scrambo": "^0.3.0",
     "sequelize": "^5.10.1",
+    "slot-machine": "^2.1.0",
     "sqlite3": "^4.0.9"
   }
 }
